[0.0.3+SVN]
* Added guild system support (guilds, ranks, invitations and requests drivers mechanisms). <wrzasq>
* Added account group support. <wrzasq>
* Added support for depot_id field (it is reserverd in OTServ for futher use). <wrzasq>
* Added PostgreSQL and ODBC drivers. <wrzasq>
* Updated players table structure. <wrzasq>
* Dropped REGEXP operator bindings - not used anywhere. <wrzasq>
* Fixed typos. <wrzasq>

[0.0.3]
* Added custom fields support. <wrzasq>
* Added items and depots support. <wrzasq>
* Added support for players PACC timestamps. <wrzasq>
* Fixed loading skills. <wrzasq>
* Replaced E_USER_* with exceptions. <wrzasq>
* Uses fetchAll() in loops to prevent MySQL buffering problems. <wrzasq>
* Restricted access to POT class constructor to make sure it won't be instanced directly. <wrzasq>

[0.0.2]
* Added "compat" library for POT. <wrzasq>
* Added skills support in OTS_Player class. <wrzasq>
* Added 'info' serverStatus() method and respond handler for server status protocol. <wrzasq>
* Fixed `redskulltime` field name in OTS_Player. <wrzasq>
* Fixed 'password' parameter for DB_MYSQL driver. <wrzasq>
* Added find() to OTS_Account class to load accounts by their's e-mail addresses. <wrzasq>
* POT class now automaticly binds own __autoload() handler with spl_autoload_register(). <wrzasq>

[0.0.1]
* Initial release. <wrzasq>